src/App.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

html, body {
  height: 100%; /* Ensure html and body cover the entire viewport */
  margin: 0; /* Remove default margins */
  padding: 0; /* Remove default padding */
}

html {
  --poppy: hsla(356, 74%, 52%, 1);
  --pumpkin-orange: rgb(255, 145, 77);
  --tangerine: rgb(255, 182, 136);
  --lemon-chiffon: hsla(58, 74%, 85%, 1);
  --buff: hsla(27, 64%, 65%, 1);
  --bistre: hsla(10, 31%, 19%, 1);
  --white: rgb(255, 255, 255);

  --background-color: var(--white);
  --accent-color: var(--pumpkin-orange);
  background-color: var(--background-color);
  
  background: linear-gradient(35deg, var(--tangerine), var(--pumpkin-orange), rgb(255, 224, 204));
  background-size: 300% 300%; 
  animation: color 12s ease-in-out infinite;
}

/*Gradient background animation*/
@keyframes color{
  0%{
    background-position: 0 50%;
  }
  50%{
    background-position: 100% 50%;
  }
  100%{
    background-position: 0 50%;
  }
}

.wrapper {
  max-width: min(800px, 100% - 4rem);
  margin-inline: auto;
}

.wrapper header {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
}

.wrapper h1{
  text-transform: uppercase;
  font-weight: bold;
  font-family: sans-serif;
  letter-spacing: 0.1em;
  font-size: 27px;
  color: black;
}

button {
  font-size: 1.5rem;
  padding: 0.5rem 1rem;
  cursor: pointer;

  border-radius: 5px;
  border: 2px solid var(--accent-color);
  color: var(--accent-color);
  background: var(--background-color);
}
button:focus,
button:hover {
  background: var(--accent-color);
  color: var(--background-color);
}

.error-message {
  border: 2px solid rgb(255, 221, 199);
  padding: 1em;
  margin: 1em 0;
  border-radius: 5px;
  color:rgb(255, 255, 255)
}

form input {
  display: block;
  margin: .5rem 0 1rem 0;
  padding: 1rem 0.5rem 0.5rem 0.5rem;
  border-radius: 5px;
  border: 2px solid var(--accent-color);
  font-size: 1rem;
}

form label {
  margin-left: 1rem;
  display: block;
  height: 0;
  width: fit-content;
  position: relative;
  z-index: 1;
}
form label::before,
form label::after {
  content: '';
  position: absolute;
  height: 1.65rem;
  top: -.25rem;
  left: -5px;
  width: calc(100% + 10px);
  border: 2px solid var(--accent-color);
  border-radius: 5px;
  background-color: rgb(255, 255, 255);
  z-index: -1;
}

form button {
  margin-right: 1rem;
}
form button[type=button] {
  border-color: var(--background-color);
}
form button[type=button]:focus,
form button[type=button]:hover {
  border-color: var(--accent-color);
}

/* Nav Bar */
nav {
  margin: 0;
  padding-top: 0rem;
  background-color: transparent;
}

nav ul {
  list-style: none;
  display: flex;
  gap: 2rem;
  padding: 0;
  justify-content: flex-end;
}

nav a {
  color: var(--background-color);
  display: block;
  --padding: 1rem;
  padding: var(--padding);
  text-decoration: none;
  font-weight: bold;
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
}

nav a:hover,
nav a:focus {
  background-color:  rgba(255, 255, 255, 0.272);
  color:white;
  outline: none;
}

.navbar-logo{
  height: 60px;
  width: 60px;
}

.pages-container {
  margin-left: auto;
  display: flex; 
  flex-wrap: nowrap; 
  gap: 2rem; 
}


/* Game CSS (for testing purposes) */
.game-container {
  border: 2px solid rgb(255, 221, 199);
  margin: 1rem 0;
  padding: 2rem;
  display: grid;
  grid-template-columns: 1fr 150px;
  border-radius: 5px;
}

.game-container p,
.game-container h2 {
  margin: 0;
  font-size: 1.5rem;
}

/* Login page */
.login-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 100vh;
}

.login-form {
  flex: 1;
  padding: 100px;
  justify-content: center; 
  align-items: center; 
}

.login-image {
  flex: 1;
  background-color: #ffd500;
  width: 50vw; 
  height: 100vh; 
  object-fit: cover; 
}

.login-text {
  color: rgb(255, 145, 77);
}

.Login-register {
  color: rgb(209, 0, 0);
}

.Login-register2 {
  color: rgb(255, 145, 77);
}

.sign-out-container {
  position: absolute; 
  top: 0; 
  right: 0; 
  padding: 10px;
}

.sign-out-button {
  border-color: var(--background-color);
}

/* Login page */
.login-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 100vh;
}

.login-form {
  flex: 1;
  padding: 100px;
  justify-content: center; 
  align-items: center; 
}

.login-image {
  flex: 1;
  background-color: #ffd500;
  width: 50vw; 
  height: 100vh; 
  object-fit: cover; 
}

.login-text {
  color: rgb(255, 255, 255);
}

.Login-register {
  color: rgb(255, 219, 194);
  text-align: center;
}

.Login-register2 {
  color: rgb(255, 255, 255);
}

.sign-out-container {
  position: absolute; 
  top: 0; 
  right: 0; 
  padding: 10px;
}

.sign-out-button {
  border-color: var(--background-color); 
}

.login-container h1{
  font-size: 36px;
  text-align: center
}

.login-container .input-box {
  position: relative;
  width: 100%;
  height: 50px;
  margin: 30px 0;
  
}

.login-container .input-box input{
  width: 100%;
  height: 100%;
  background: transparent;
  border: none;
  outline: none;
  border: 2px solid rgb(255, 184, 139);
  border-radius: 40px;
  font-size: 16px;
  color: rgb(255, 255, 255);
  padding: 20px 45px 20px 20px;
}

.login-container .Login-register {
  color: rgb(255, 221, 199);
  text-align: center
}

.login-container button {
  width: 100%;
  height: 45px;
  background: rgb(255, 182, 137);
  border: none;
  outline: none;
  border-radius: 40px;
  box-shadow: 0 0 10px rgba (0, 0, 0, .1);
  cursor: pointer;
  font-size: 16px;
  color: #ffffff;
  font-weight: 700;
}

.login-container button:hover{
  background: rgba(255, 98, 0, 0.2);
}

.input-box input::placeholder{
  color: rgb(255, 255, 255);
}

/* Make a group / join a group button animation */
.group-button button {
  --button-color: rgb(255, 255, 255);
  color: var(--button-color);
  font-size: 16px;
  border: 0.3em solid var(--button-color);
  border-radius: 0.5em;
  width: 12em;
  height: 3em;
  text-transform: uppercase;
  font-weight: bold;
  font-family: sans-serif;
  letter-spacing: 0.1em;
  text-align: center;
  line-height: 1em;
  position: relative;
  overflow: hidden;
  z-index: 1;
  transition: 0.5s;
  margin: 1em;
  background-color: rgba(0, 0, 255, 0);
}

.group-button span {
  position: absolute;
  width: 25%;
  height: 100%;
  background-color: var(--button-color);
  transform: translateY(150%);
  border-radius: 50%;
  left: calc((var(--n) - 1) * 25%);
  transition: 0.5s;
  transition-delay: calc((var(--n) - 1) * 0.1s);
  z-index: -1;
}

.group-button button:hover {
  color: rgb(0, 0, 0);
}

.group-button button:hover span {
  transform: translateY(0) scale(2);
}

.group-button button span:nth-child(1) {
  --n: 1;
}

.group-button button span:nth-child(2) {
  --n: 2;
}

.group-button button span:nth-child(3) {
  --n: 3;
}

.group-button button span:nth-child(4) {
  --n: 4;
}

/* centering and formatting group */
.group-container {
  border: 2px solid rgb(255, 221, 199);
  margin: 1rem 0;
  padding: 2rem;
  border-radius: 5px;
  max-width: min(520px);
  margin-inline: auto;
}

/* group name text */
.group-container h2 {
  text-transform: uppercase;
  font-weight: bold;
  font-family: sans-serif;
  letter-spacing: 0.1em;
  font-size: 20px;
}

/*leave button*/
button.group-button {
  --button-color: rgba(255, 255, 255, 1);
  color: rgb(0, 0, 0);
  font-size: 16px;
  border: 0.3em solid var(--button-color);
  border-radius: 0.5em;
  width: 12em;
  height: 3em;
  text-transform: uppercase;
  font-weight: bold;
  font-family: sans-serif;
  letter-spacing: 0.1em;
  text-align: center;
  line-height: 1em;
  position: relative;
  overflow: hidden;
  z-index: 1;
  transition: 0.5s;
  margin: 1em;
  background-color: var(--button-color);
}

button.group-button:hover {
  background-color: rgb(252, 221, 177); 
  color: black; 
}

button.group-button span {
  position: absolute;
  width: 25%;
  height: 100%;
  background-color: rgb(252, 221, 177);
  transform: translateY(150%);
  border-radius: 50%;
  left: calc((var(--n) - 1) * 25%);
  transition: 0.5s;
  transition-delay: calc((var(--n) - 1) * 0.1s);
  z-index: -1;
}

button.group-button:hover span {
  transform: translateY(0) scale(2);
}

button.group-button span:nth-child(1) {
  --n: 1;
}

button.group-button span:nth-child(2) {
  --n: 2;
}

button.group-button span:nth-child(3) {
  --n: 3;
}

button.group-button span:nth-child(4) {
  --n: 4;
}

/* link text color */
.group-button a{
  color: black;
}

/* Resturant Like button */
button.rest-button {
  --button-color: rgba(255, 255, 255, 1);
  color: rgb(0, 0, 0);
  font-size: 16px;
  border: 0.3em solid var(--button-color);
  border-radius: 0.5em;
  width: 7em;
  height: 3em;
  text-transform: uppercase;
  font-weight: bold;
  font-family: sans-serif;
  letter-spacing: 0.1em;
  text-align: center;
  line-height: 1em;
  position: relative;
  overflow: hidden;
  z-index: 1;
  transition: 0.5s;
  margin: 1em 0;
  background-color: var(--button-color);
}

button.rest-button:hover {
  background-color: rgb(252, 177, 226); 
  color: black; 
}

button.rest-button span {
  position: absolute;
  width: 25%;
  height: 100%;
  background-color: rgb(252, 177, 226); 
  transform: translateY(150%);
  border-radius: 50%;
  left: calc((var(--n) - 1) * 25%);
  transition: 0.5s;
  transition-delay: calc((var(--n) - 1) * 0.1s);
  z-index: -1;
}

button.rest-button:hover span {
  transform: translateY(0) scale(2);
}

button.rest-button span:nth-child(1) {
  --n: 1;
}

button.rest-button span:nth-child(2) {
  --n: 2;
}

button.rest-button span:nth-child(3) {
  --n: 3;
}

button.rest-button span:nth-child(4) {
  --n: 4;
}


/* Resturant  CSS (for testing purposes) */
.rest-container {
  border: 2px solid rgb(255, 221, 199);
  margin: 1rem 0;
  padding: 2rem;
  border-radius: 5px;
  max-width: min(700px);
  margin-inline: auto;
  display: grid;
  grid-template-columns: 1fr 150px;
}

.rest-container p{
  font-size: 1.0rem;
  text-transform: uppercase;
  font-weight: bold;
  font-family: sans-serif;
  letter-spacing: 0.1em;
}
.rest-container h2 {
  margin: 0;
  font-size: 1.5rem;
}

/* Search Group Name Search Bar */
.search-box1 {
  width: 285px; 
  padding: 10px;
  border: 1px solid #ffffff;
  border-radius: 5px;
  font-size: 16px;
  box-sizing: border-box;
  outline: none; 
}

.search-box1:focus {
  border-color: white; 
  box-shadow: 0 0 0 2px black inset;
}

